deployer/deployment-controller/src/test/k8s/experiment-kustomize/app-base/datagrid.yaml
apiVersion: v1
kind: Service
metadata:
  name: datagrid
  labels:
    app.kubernetes.io/component: payara-datagrid-service
spec:
  type: ClusterIP
  # Hazelcast DNS discovery needs services without cluster IP, so that all endpoints reside in DNS
  clusterIP: None
  selector:
    app.kubernetes.io/name: $(NAME)
    app.kubernetes.io/part-of: $(PROJECT)-$(STAGE)
    app.kubernetes.io/component: payara-app
  ports:
  - port: 6900
    targetPort: 6900
    name: hazelcast
