deployer/deployment-controller/src/test/k8s/experiment-kustomize/app-base/ingress.yaml
# this apigroup is available from 1.14 onwards
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
  labels:
    app.kubernetes.io/component: payara-app-ingress
    app.kubernetes.io/part-of: $(PROJECT)-$(STAGE)
    app.kubernetes.io/managed-by: payara-cloud  
spec:
  rules:
  - host: $(PROJECT)-$(STAGE).$(DOMAIN)
    http:
      paths:
      - path: $(PATH)
        backend:
          serviceName: service
          servicePort: 80
