deployer/deployment-controller/src/test/k8s/experiment-kustomize/app-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app.kubernetes.io/component: payara-app-service
spec:
  selector:
    app.kubernetes.io/name: $(NAME)
    app.kubernetes.io/part-of: $(PROJECT)-$(STAGE)
    app.kubernetes.io/component: payara-app
  ports:
  - port: 80
    targetPort: 8080
    name: http
